# wu-lab-recolor

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  test.tif
ext/: lab_recolor.c
src/: CMakeLists.txt  Makefile  cmake_install.cmake  lab_recolor.c  lab_recolor.h  main.c
test/: CMakeLists.txt  Makefile  cmake_install.cmake  test.c
test/fixtures/: labtiff.tif
